syntax = "proto3";
option csharp_namespace = "Kronos.Core.Messages";

import "auth.proto";
import "requestType.proto";
import "insert.proto";
import "get.proto";
import "delete.proto";
import "count.proto";
import "contains.proto";
import "clear.proto";
import "stats.proto";

message Request {
  Auth Auth = 1;
  RequestType Type = 2;
  InsertRequest InsertRequest = 3;
  GetRequest GetRequest = 4;
  DeleteRequest DeleteRequest = 5;
  ContainsRequest ContainsRequest = 6;
  CountRequest CountRequest = 7;
  ClearRequest ClearRequest = 8;
  StatsRequest StatsRequest = 9;
}