syntax = "proto3";
option csharp_namespace = "Kronos.Core.Messages";

enum RequestType {
	Unknown = 0;
	Insert = 1;
	Get = 2;
	Delete = 3;
	Count = 4;
	Contains = 5;
	Clear = 6;
	Stats = 7;
}